font awesome icons

--- a/html/boot3.html
+++ b/html/boot3.html
@@ -172,8 +172,8 @@
                 <div class="p-3 ">
 
                     <a href="www.facebook.com" class="fb-ic">
-
-                        <i class="fa fa-facebook fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                            <i class="fa fa-facebook-f" style="color:white"></i>
+                      <!--  <i class="fa fa-facebook fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>-->
 
                     </a>
 
@@ -183,7 +183,7 @@
 
                     <a href="https://twitter.com" class="tw-ic">
 
-                        <i class="fa fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                        <i class="fa fa-twitter fa-lg " style="color:white"> </i>
 
                     </a>
 
@@ -193,7 +193,7 @@
 
                     <a href="https://www.google.com/gmail/about/#" class="gplus-ic">
 
-                        <i class="fa fa-google-plus fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                        <i class="fa fa-google-plus fa-lg " style="color:white"> </i>
 
                     </a>
 
@@ -203,7 +203,7 @@
 
                     <a href="#" class="li-ic">
 
-                        <i class="fa fa-linkedin fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                        <i class="fa fa-linkedin fa-lg "style="color:white"> </i>
 
                     </a>
 
